--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+    <title>H&R Development</title>
+    <link rel="icon" href="%PUBLIC_URL%/hrlogo.png" />
+    <link
+      rel="shortcut icon"
+      href="https://firebasestorage.googleapis.com/v0/b/hyr-dev.appspot.com/o/logo.png?alt=media&token=a6bed54b-0c49-438f-b0ff-e46b6510384d"
+    />
+    <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ofrecemos soluciones para emprendedores y empresas que le permitan a su negocio crecer utilizando la tecnología como pilar de innovación y desarrollo"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#4e33d5" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="https://firebasestorage.googleapis.com/v0/b/hyr-dev.appspot.com/o/logo.png?alt=media&token=a6bed54b-0c49-438f-b0ff-e46b6510384d"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://firebasestorage.googleapis.com/v0/b/hyr-dev.appspot.com/o/logo.png?alt=media&token=a6bed54b-0c49-438f-b0ff-e46b6510384d"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,10 +39,53 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta property="fb:app_id" content="701396363770048" />
+    <meta
+      property="og:description"
+      content="Ofrecemos soluciones para emprendedores y empresas que le permitan a su negocio crecer utilizando la tecnología como pilar de innovación y desarrollo"
+    />
+    <meta property="og:title" content="H&R Development" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hyr-dev.web.app/" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/hyr-dev.appspot.com/o/logo.png?alt=media&token=a6bed54b-0c49-438f-b0ff-e46b6510384d"
+    />
+    <meta property="og:site_name" content="https://hyr-dev.web.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@HyRDev" />
+    <meta name="twitter:title" content="H&R Development" />
+    <meta
+      name="twitter:description"
+      content="Ofrecemos soluciones para emprendedores y empresas que le permitan a su negocio crecer utilizando la tecnología como pilar de innovación y desarrollo"
+    />
+    <meta
+      name="twitter:image:src"
+      content="https://firebasestorage.googleapis.com/v0/b/hyr-dev.appspot.com/o/logo.png?alt=media&token=a6bed54b-0c49-438f-b0ff-e46b6510384d"
+    />
+    <meta name="twitter:domain" content="https://hyr-dev.web.app/" />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+              "@id": "https://hyr-dev.web.app/",
+              "name": "🚀 H&R Dev: Soluciones para el día a día"
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Necesita habilitar JavaScript en su navegador para utilizar esta
+      aplicación.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
